fixed stretched img

--- a/style.css
+++ b/style.css
@@ -204,7 +204,12 @@ h3 {
 #product1 .pro img,
 #product2 .pro img {
   width: 100%;
-  border-radius: 20px;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  padding-bottom: 0px;
+  border-radius: 10px;
 }
 
 #product1 .pro:hover,
@@ -390,8 +395,8 @@ h3 {
   } */
 
   .pro img {
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
     padding-bottom: 0px;
   }
 
@@ -438,7 +443,11 @@ h3 {
   #product1 .pro img,
   #product2 .pro img {
     width: 100%;
-    border-radius: 20px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
   }
 
   #product1 .pro .des,
